# internal/handlers/userhandler/handler.go
@@ -4,9 +4,11 @@ import (
 	"encoding/json"
 	"github.com/valyala/fasthttp"
 	"golang_pet_project_1/internal/core/domain"
+	"golang_pet_project_1/internal/core/ports"
 )
 
 type UserHandler struct {
+	userService ports.UserService
 }
 
 func (UserHandler) CreateUser(ctx *fasthttp.RequestCtx) {
@@ -28,6 +30,36 @@ func (UserHandler) CreateUser(ctx *fasthttp.RequestCtx) {
 
 func (UserHandler) GetUser(ctx *fasthttp.RequestCtx) {
 
+	searchType := string(ctx.QueryArgs().Peek("searchType"))
+	//search := string(ctx.QueryArgs().Peek("search"))
+
+	user := &domain.User{
+		ID:       1,
+		Username: "asd",
+		Name:     "clown",
+		Age:      123,
+	}
+
+	b, err := json.Marshal(user)
+	if err != nil {
+		ctx.Error("Internal Server Error", fasthttp.StatusInternalServerError)
+		return
+	}
+
+	switch searchType {
+	case "id":
+		break
+	case "username":
+		break
+	case "name":
+		break
+	default:
+		ctx.Error("Invalid searchType supplied", fasthttp.StatusBadRequest)
+		return
+	}
+
+	ctx.SetContentType("application/json")
+	ctx.SetBody(b)
 }
 
 func (UserHandler) UpdateUser(ctx *fasthttp.RequestCtx) {
