# swagger.yaml
@@ -5,79 +5,83 @@ info:
 host: "localhost"
 basePath: "/"
 tags:
-- name: "user"
-  description: "Operations about user"
-  externalDocs:
-    description: "user crud"
-    url: "https://hentaihaven.red/"
+  - name: "user"
+    description: "Operations about user"
+    externalDocs:
+      description: "user crud"
+      url: "https://hentaihaven.red/"
 paths:
   /user:
     post:
       tags:
-      - "user"
+        - "user"
       summary: "Create user"
       description: "Create user"
       operationId: "createUser"
       produces:
-      - "application/json"
+        - "application/json"
       parameters:
-      - in: "body"
-        name: "body"
-        description: "Created user object"
-        required: true
-        schema:
-          $ref: "#/definitions/User"
+        - in: "body"
+          name: "body"
+          description: "Created user object"
+          required: true
+          schema:
+            $ref: "#/definitions/User"
       responses:
         '200':
           description: "Created new user"
           schema:
             $ref: "#/definitions/User"
+        "405":
+          description: "Invalid input"
   /user/get:
     get:
       tags:
-      - "user"
+        - "user"
       summary: "Get user"
       description: ""
       operationId: "getUserByName"
       produces:
-      - "application/json"
+        - "application/json"
       parameters:
-      - in: "body"
-        name: "body"
-        description: "Get user by id, nickname, name"
-        required: true
-        schema:
-          $ref: "#/definitions/SearchUser"
+        - in: query
+          name: searchType
+          type: string
+          description: Search type (ID, username, name)
+        - in: query
+          name: search
+          type: string
+          description: The numbers of items to return
       responses:
         "200":
           description: "successful operation"
           schema:
             $ref: "#/definitions/User"
         "400":
-          description: "Invalid user id supplied"
+          description: "Invalid searchType supplied"
         "404":
           description: "User not found"
   /user/{user_id}:
     post:
       tags:
-      - "user"
+        - "user"
       summary: "Update user"
       description: "Update user"
       operationId: "updateUser"
       produces:
-      - "application/json"
+        - "application/json"
       parameters:
-      - name: "user_id"
-        in: "path"
-        description: "The id of user that needs to be updated"
-        required: true
-        type: "string"
-      - in: "body"
-        name: "body"
-        description: "Updated user object"
-        required: true
-        schema:
-          $ref: "#/definitions/User"
+        - name: "user_id"
+          in: "path"
+          description: "The id of user that needs to be updated"
+          required: true
+          type: "string"
+        - in: "body"
+          name: "body"
+          description: "Updated user object"
+          required: true
+          schema:
+            $ref: "#/definitions/User"
       responses:
         "400":
           description: "Invalid user id supplied"
@@ -87,18 +91,18 @@ paths:
           description: "Invalid input"
     delete:
       tags:
-      - "user"
+        - "user"
       summary: "Delete user"
       description: "Delete user"
       operationId: "deleteUser"
       produces:
-      - "application/json"
+        - "application/json"
       parameters:
-      - name: "user_id"
-        in: "path"
-        description: "The id of user that needs to be deleted"
-        required: true
-        type: "string"
+        - name: "user_id"
+          in: "path"
+          description: "The id of user that needs to be deleted"
+          required: true
+          type: "string"
       responses:
         "400":
           description: "Invalid user id supplied"
@@ -121,17 +125,4 @@ definitions:
         type: "integer"
     xml:
       name: "User"
-  SearchUser:
-    type: "object"
-    properties:
-      findBy:
-        type: "string"
-      id:
-        type: "integer"
-      username:
-        type: "string"
-      name:
-        type: "string"
-    xml:
-      name: "SearchUser"
   
